@@ -525,7 +525,7 @@ void cat_module PROTO((int status));
 void check_entries PROTO((char *dir));
 void close_module PROTO((DBM * db));
 void copy_file PROTO((const char *from, const char *to));
-void fperror PROTO((FILE * fp, int status, int errnum, char *message,...));
+void fperrmsg PROTO((FILE * fp, int status, int errnum, char *message,...));
 void free_names PROTO((int *pargc, char *argv[]));
 
 extern int ign_name PROTO ((char *name));
