@@ -725,8 +725,8 @@ add_rev (message, rcs, vfile, vers)
     {
 	if (!noexec)
 	{
-	    fperror (logfp, 0, status == -1 ? ierrno : 0,
-		     "ERROR: Check-in of %s failed", rcs->path);
+	    fperrmsg (logfp, 0, status == -1 ? ierrno : 0,
+		      "ERROR: Check-in of %s failed", rcs->path);
 	    error (0, status == -1 ? ierrno : 0,
 		   "ERROR: Check-in of %s failed", rcs->path);
 	}
@@ -765,8 +765,8 @@ add_tags (rcs, vfile, vtag, targc, targv)
     if ((retcode = RCS_settag(rcs, vtag, vbranch)) != 0)
     {
 	ierrno = errno;
-	fperror (logfp, 0, retcode == -1 ? ierrno : 0,
-		 "ERROR: Failed to set tag %s in %s", vtag, rcs->path);
+	fperrmsg (logfp, 0, retcode == -1 ? ierrno : 0,
+		  "ERROR: Failed to set tag %s in %s", vtag, rcs->path);
 	error (0, retcode == -1 ? ierrno : 0,
 	       "ERROR: Failed to set tag %s in %s", vtag, rcs->path);
 	return (1);
@@ -789,9 +789,9 @@ add_tags (rcs, vfile, vtag, targc, targv)
 	else
 	{
 	    ierrno = errno;
-	    fperror (logfp, 0, retcode == -1 ? ierrno : 0,
-		     "WARNING: Couldn't add tag %s to %s", targv[i],
-		     rcs->path);
+	    fperrmsg (logfp, 0, retcode == -1 ? ierrno : 0,
+		      "WARNING: Couldn't add tag %s to %s", targv[i],
+		      rcs->path);
 	    error (0, retcode == -1 ? ierrno : 0,
 		   "WARNING: Couldn't add tag %s to %s", targv[i],
 		   rcs->path);
@@ -1069,8 +1069,8 @@ add_rcs_file (message, rcs, user, add_vhead, key_opt,
 	{
 	    /* not fatal, continue import */
 	    if (add_logfp != NULL)
-		fperror (add_logfp, 0, errno,
-			 "ERROR: cannot read file %s", userfile);
+		fperrmsg (add_logfp, 0, errno,
+			  "ERROR: cannot read file %s", userfile);
 	    error (0, errno, "ERROR: cannot read file %s", userfile);
 	    goto read_error;
 	}
@@ -1377,8 +1377,8 @@ add_rcs_file (message, rcs, user, add_vhead, key_opt,
     {
 	ierrno = errno;
 	if (add_logfp != NULL)
-	    fperror (add_logfp, 0, ierrno,
-		     "WARNING: cannot change mode of file %s", rcs);
+	    fperrmsg (add_logfp, 0, ierrno,
+		      "WARNING: cannot change mode of file %s", rcs);
 	error (0, ierrno, "WARNING: cannot change mode of file %s", rcs);
 	err++;
     }
@@ -1397,14 +1397,14 @@ write_error_noclose:
     if (fclose (fpuser) < 0)
 	error (0, errno, "cannot close %s", user);
     if (add_logfp != NULL)
-	fperror (add_logfp, 0, ierrno, "ERROR: cannot write file %s", rcs);
+	fperrmsg (add_logfp, 0, ierrno, "ERROR: cannot write file %s", rcs);
     error (0, ierrno, "ERROR: cannot write file %s", rcs);
     if (ierrno == ENOSPC)
     {
 	if (CVS_UNLINK (rcs) < 0)
 	    error (0, errno, "cannot remove %s", rcs);
 	if (add_logfp != NULL)
-	    fperror (add_logfp, 0, 0, "ERROR: out of space - aborting");
+	    fperrmsg (add_logfp, 0, 0, "ERROR: out of space - aborting");
 	error (1, 0, "ERROR: out of space - aborting");
     }
 read_error:
@@ -1513,7 +1513,7 @@ import_descend_dir (message, dir, vtag, targc, targv)
 	return (0);
     if (save_cwd (&cwd))
     {
-	fperror (logfp, 0, 0, "ERROR: cannot get working directory");
+	fperrmsg (logfp, 0, 0, "ERROR: cannot get working directory");
 	return (1);
     }
 
@@ -1544,7 +1544,7 @@ import_descend_dir (message, dir, vtag, targc, targv)
     if ( CVS_CHDIR (dir) < 0)
     {
 	ierrno = errno;
-	fperror (logfp, 0, ierrno, "ERROR: cannot chdir to %s", repository);
+	fperrmsg (logfp, 0, ierrno, "ERROR: cannot chdir to %s", repository);
 	error (0, ierrno, "ERROR: cannot chdir to %s", repository);
 	err = 1;
 	goto out;
@@ -1559,9 +1559,9 @@ import_descend_dir (message, dir, vtag, targc, targv)
 	(void) sprintf (rcs, "%s%s", repository, RCSEXT);
 	if (isfile (repository) || isfile(rcs))
 	{
-	    fperror (logfp, 0, 0,
-		     "ERROR: %s is a file, should be a directory!",
-		     repository);
+	    fperrmsg (logfp, 0, 0,
+		      "ERROR: %s is a file, should be a directory!",
+		      repository);
 	    error (0, 0, "ERROR: %s is a file, should be a directory!",
 		   repository);
 	    err = 1;
@@ -1570,8 +1570,8 @@ import_descend_dir (message, dir, vtag, targc, targv)
 	if (noexec == 0 && CVS_MKDIR (repository, 0777) < 0)
 	{
 	    ierrno = errno;
-	    fperror (logfp, 0, ierrno,
-		     "ERROR: cannot mkdir %s -- not added", repository);
+	    fperrmsg (logfp, 0, ierrno,
+		      "ERROR: cannot mkdir %s -- not added", repository);
 	    error (0, ierrno,
 		   "ERROR: cannot mkdir %s -- not added", repository);
 	    err = 1;
